--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -18,6 +18,7 @@
         android:paddingHorizontal="12dp">
 
         <ImageView
+            android:id="@+id/ic_search"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_centerVertical="true"
