--- a/app/src/main/res/layout/activity_diary_detail.xml
+++ b/app/src/main/res/layout/activity_diary_detail.xml
@@ -139,9 +139,9 @@
                 android:id="@+id/ll_images"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginBottom="24dp"/>
-
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginBottom="24dp"></LinearLayout>
             <!-- 内容 -->
             <TextView
                 android:id="@+id/tv_content"
@@ -150,7 +150,7 @@
                 android:text="日记内容"
                 android:textSize="16sp"
                 android:textColor="@color/primary_text"
-                android:lineSpacingExtra="8dp"/>
+                android:lineSpacingExtra="8dp"></TextView>
 
         </LinearLayout>
 
